Correct quote.  Update benchmark.